src/component/table/snapshots/envision__component__table__view_tests__snapshot_table_cells_mixed_styles_in_one_row.snap
---
source: src/component/table/view_tests.rs
expression: plain
---
┌──────────────────────────────────────┐
│S        E        M                   │
│                                      │
│ok       fail     idle                │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
