src/component/table/snapshots/envision__component__table__view_tests__snapshot_table_cells_severity_disabled_renders_dark_gray_no_bold.snap
---
source: src/component/table/view_tests.rs
expression: plain
---
┌──────────────────────────────────────┐
│G        M        B        C          │
│                                      │
│good     mild     bad      crit       │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
