src/component/table/snapshots/envision__component__table__view_tests__snapshot_table_cells_with_warning_style.snap
---
source: src/component/table/view_tests.rs
expression: plain
---
┌──────────────────────────────────────┐
│Name       Value                      │
│                                      │
│alpha      beta                       │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
