src/component/table/snapshots/envision__component__table__view_tests__snapshot_table_no_status_column_when_all_rows_status_none.snap
---
source: src/component/table/view_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│  Name       Value                    │
│                                      │
│> Alice      10                       │
│  Bob        20                       │
│  Carol      30                       │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
