src/component/table/snapshots/envision__component__table__view_tests__snapshot_table_sort_indicator_appears_on_sort_asc.snap
---
source: src/component/table/view_tests.rs
expression: rendered
---
┌──────────────────────────────────────┐
│  Name ↑     Value                    │
│                                      │
│  Alice      10                       │
│  Bob        20                       │
│> Charlie    30                       │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
