src/component/table/snapshots/envision__component__table__view_tests__snapshot_table_sort_indicator_disappears_on_sort_clear.snap
---
source: src/component/table/view_tests.rs
expression: rendered
---
┌──────────────────────────────────────┐
│  Name       Value                    │
│                                      │
│> Charlie    30                       │
│  Alice      10                       │
│  Bob        20                       │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
