src/component/table/snapshots/envision__component__table__view_tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/table/view_tests.rs
assertion_line: 562
expression: display
---
  Name       Value                      
                                        
> Charlie    30                         
  Alice      10                         
  Bob        20
