src/component/table/snapshots/envision__component__table__view_tests__view_descending_sort_indicator.snap
---
source: src/component/table/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│  Name ↓     Value                    │
│                                      │
│> Charlie    30                       │
│  Bob        20                       │
│  Alice      10                       │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
