src/component/table/snapshots/envision__component__table__view_tests__view_multi_column_sort_indicators.snap
---
source: src/component/table/view_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│  Name ↑1    Value ↑2                 │
│                                      │
│  Alice      10                       │
│  Bob        20                       │
│> Charlie    30                       │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
