src/component/table/snapshots/envision__component__table__view_tests__view_renders.snap
---
source: src/component/table/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│  Name       Value                    │
│                                      │
│> Charlie    30                       │
│  Alice      10                       │
│  Bob        20                       │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
