src/component/table/snapshots/envision__component__table__view_tests__view_with_sort_indicator.snap
---
source: src/component/table/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│  Name ↑     Value                    │
│                                      │
│  Alice      10                       │
│  Bob        20                       │
│> Charlie    30                       │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
